--- a/ShimazuSite/prepros-6.config
+++ b/ShimazuSite/prepros-6.config
@@ -12,7 +12,12 @@
     "expandedDirs": [
       "css",
       "#Source",
-      "#Source/scss"
+      "#Source/scss",
+      "Статьи",
+      "Статьи\\Поиск_Статей",
+      "Статьи\\Поиск_Статей\\css",
+      "Статьи\\Поиск_Статей\\#Source",
+      "Статьи\\Поиск_Статей\\#Source\\scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -41,7 +46,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "settings"
   },
   "fileWatcher": {
     "enabled": true,
